--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.7.0",
+    "@react-pdf-viewer/default-layout": "^3.7.0",
     "@syncfusion/ej2-react-calendars": "^20.3.50",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -16,6 +18,7 @@
     "jspdf-autotable": "^3.5.25",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
+    "pdfjs-dist": "^2.15.349",
     "prop-types": "^15.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
